[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-nebula"
version = "0.1.2"

authors = [
    {name = "amogus-gggy"},
    {name = "vxiddev"}
]

description = "Simple ASGI micro framework for Python"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "cython>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/amogus-gggy/project-nebula"
