[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-nebula"
version = "1.1"

authors = [
    {name = "amogus-gggy"},
    {name = "vxiddev"}
]

description = "Simple ASGI micro framework for Python"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "uvicorn[standard]>=0.30.0",
    "anyio>=4.0.0",
    "jinja2>=3.0.0",
    "ujson"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "cython>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/amogus-gggy/project-nebula"
